# mugg_game

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: contentmanager.cpp  contentmanager.hpp  engine.cpp  engine.hpp  engine.hpp~  fileutils.cpp  keyboard.cpp  keyboard.hpp  keydefs.hpp  logger.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
src/game/: game.cpp  game.hpp  gamestate.hpp
src/graphics/: camera.hpp  color.cpp  globject.hpp  graphicsdefs.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  shaderprogram.cpp  shaderprogram.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp  textureatlas.hpp  vertexarray.cpp  vertexarray.hpp
src/gui/: font.cpp  font.hpp  guimanager.cpp  guimanager.hpp  guiobject.cpp  guiobject.hpp  sprite.cpp  sprite.hpp  spritebatch.cpp  spritebatch.hpp
src/scene/: scenemanager.cpp  scenemanager.hpp  scenenode.cpp  scenenode.hpp
